--- a/MyPhotoblog.pl/index.html
+++ b/MyPhotoblog.pl/index.html
@@ -63,12 +63,14 @@
 
     <!--        HEADER      -->
     <header class="header">
+        <section class="header-blur"></section>
         <p class="header-title">
            MYPHOTOBLOG
         </p>
 
         <a  href="#upHere" class="header-button">
             <section class="header-button-icon">
+            SCROLL DOWN
                 <i class="fa-solid fa-angles-down"></i>
             </section>
         </a>
@@ -77,12 +79,26 @@
 
 
     <!--       CONTENT     -->
+    <section class="content" >
+        <h1 class="content-header" id="upHere">
+            Krótko o projekcie
+        </h1>
+        <p class="content-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem illum sequi voluptates reiciendis ratione quos dolore facilis animi similique accusamus quas expedita dolores, ipsam assumenda? Voluptatibus possimus fugiat dolor quae.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem illum sequi voluptates reiciendis ratione quos dolore facilis animi similique accusamus quas expedita dolores, ipsam assumenda? Voluptatibus possimus fugiat dolor quae.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem illum sequi voluptates reiciendis ratione quos dolore facilis animi similique accusamus quas expedita dolores, ipsam assumenda? Voluptatibus possimus fugiat dolor quae.
+        </p>
+    </section>
+
     <section class="content">
-        <h1 class="content-header">
-            Co tutaj znajdziesz?
+        <h1 class="content-header-right">
+            Zobacz więcej
         </h1>
         <p class="content-text" id="upHere">
-            Strona jest poświęcona fotografii. Głównie znajdziesz tutaj zdjęcia natury ożywionej jak i tej martwej. Zajmuję się hobbystycznym fotografowaniem przyrody i krajobrazów
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem illum sequi voluptates reiciendis ratione quos dolore facilis animi similique accusamus quas expedita dolores, ipsam assumenda? Voluptatibus possimus fugiat dolor quae.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem illum sequi voluptates reiciendis ratione quos dolore facilis animi similique accusamus quas expedita dolores, ipsam assumenda? Voluptatibus possimus fugiat dolor quae.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem illum sequi voluptates reiciendis ratione quos dolore facilis animi similique accusamus quas expedita dolores, ipsam assumenda? Voluptatibus possimus fugiat dolor quae.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem illum sequi voluptates reiciendis ratione quos dolore facilis animi similique accusamus quas expedita dolores, ipsam assumenda? Voluptatibus possimus fugiat dolor quae.
         </p>
     </section>
 
@@ -102,16 +118,16 @@
         </section>
         <section class="footer-media-container">
             <a href="#" class="footer-media-button">
-                <!--FB-->
+                <i class="fa-brands fa-square-facebook"></i>
             </a>
             <a href="#" class="footer-media-button">
-                <!--IG-->
+                <i class="fa-brands fa-instagram"></i>
             </a>
             <a href="#" class="footer-media-button">
-                <!--YT-->
+                <i class="fa-brands fa-youtube"></i>
             </a>
             <a href="#" class="footer-media-button">
-                <!--TW-->
+                <i class="fa-brands fa-twitter"></i>
             </a>
         </section>
     </footer>
